# translation-client-v2

./: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
.cargo/: config.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: inference.rs  main.rs
src/app/: copy.js  globals.css  layout.js  page.js  progress.js
src/app/contribute/: page.js
src/app/inference/: page.js
