[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["api-all"] }

candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.1"  }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
candle-flash-attn = { git = "https://github.com/huggingface/candle.git", version = "0.3.1", optional = true }
anyhow = "1.0.75"
hf-hub = "0.3.2"
tokenizers = "0.15.0"
sysinfo = "0.29.11"
reqwest = { version = "0.11.22", features = ["stream"] }
futures-util = "0.3.29"
dirs = "5.0.1"
ring = "0.17.7"
urlencoding = "2.1.3"
unidecode = "0.3.0"

[profile.dev.package."*"]
opt-level = 3

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
